<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdaugareCursaActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPlecare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tilDestinatie">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPlecare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cursa_plecare" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDestinatie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPlecare">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietDestinatie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cursa_destinatie" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDataPlecare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tilOraPlecare"
        app:layout_constraintTop_toBottomOf="@id/tilDestinatie">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietDataPlecare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cursa_data_plecare"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilOraPlecare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toRightOf="@id/tilDataPlecare"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilDestinatie">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietOraPlecare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cursa_ora_plecare"
            android:inputType="time" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvNrPasageri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/cursa_numar_pasageri"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvNrPasageri"
        app:layout_constraintTop_toBottomOf="@id/tilOraPlecare" />

    <RadioGroup
        android:id="@+id/rgNrPasageri"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toRightOf="@id/tvNrPasageri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilOraPlecare">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cursa_1_pasager" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cursa_2_pasageri" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cursa_3_pasageri" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cursa_4_pasageri" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPretPerPasager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgNrPasageri">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPretPerPasager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cursa_pret_per_pasager"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvAcceptaAnimaleCompanie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/cursa_accepta_animale_companie"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cbAcceptaAnimaleCompanie"
        app:layout_constraintTop_toBottomOf="@id/tilPretPerPasager" />

    <CheckBox
        android:id="@+id/cbAcceptaAnimaleCompanie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvAcceptaAnimaleCompanie"
        app:layout_constraintTop_toBottomOf="@id/tilPretPerPasager"/>


    <Button
        android:id="@+id/btnSalvare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="adaugaCursa"
        android:text="@string/cursa_salveaza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>