<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lv_item_background"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_car_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_car_rental_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:contentDescription="@string/cursa_imagine_car_sharing"
        />

    <TextView
        android:id="@+id/tv_plecare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        android:text="@string/cursa_plecare"
        android:textColor="#37474F"
        app:layout_constraintEnd_toStartOf="@id/tv_destinatie"
        app:layout_constraintStart_toEndOf="@id/iv_car_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_destinatie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        android:text="@string/cursa_destinatie"
        android:textColor="#37474F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_plecare"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_data"
        android:src="@drawable/ic_baseline_date_range_24"
        app:layout_constraintTop_toBottomOf="@id/iv_car_picture"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:padding="5dp"
        android:contentDescription="@string/cursa_imagine_data_plecare"
        />

    <TextView
        android:id="@+id/tv_data_plecare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        android:text="@string/cursa_data_plecare"
        android:textColor="#37474F"
        app:layout_constraintEnd_toStartOf="@id/iv_accepta_animale_companie"
        app:layout_constraintStart_toEndOf="@id/iv_data"
        app:layout_constraintTop_toBottomOf="@id/iv_car_picture" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_accepta_animale_companie"
        android:src="@drawable/ic_baseline_pets_24"
        app:layout_constraintTop_toBottomOf="@id/iv_car_picture"
        app:layout_constraintStart_toStartOf="@id/tv_data_plecare"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:padding="5dp"
        android:contentDescription="@string/cursa_imagine_data_plecare"
        />

</androidx.constraintlayout.widget.ConstraintLayout>