<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.UtilizatoriFragment">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/btnIncarcaUtilizatori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/buton_rotunjit"
        android:text="@string/utilizatori_incarca_date" />

    <EditText
        android:id="@+id/tvFiltruUtilizatori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnIncarcaUtilizatori"
        android:importantForAutofill="no"
        android:visibility="invisible"
        android:inputType="textPersonName"
        android:text="@string/utilizatori_cautare"
        android:textColor="@color/teal_700"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/lvUtilizatori"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFiltruUtilizatori"/>

    <Button
        android:id="@+id/btnInchideUtilizatori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lvUtilizatori"
        android:background="@drawable/buton_rotunjit"
        android:text="@string/utilizatori_inchide" />

</androidx.constraintlayout.widget.ConstraintLayout>